--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,31 @@
+# name: dart_application_1
+# description: A sample Dart API concept
+# version: 1.0.0
+# # repository: https://github.com/my_org/my_repo
+
+# environment:
+#   sdk: ^3.7.0
+
+# # Add regular dependencies here.
+# dependencies:
+#   # path: ^1.8.0
+#   http: ^1.2.0  # Use the latest version from pub.dev
+#   shelf: ^1.4.0
+#   shelf_router: ^1.1.0
+
+# dev_dependencies:
+#   lints: ^5.0.0
+#   test: ^1.24.0
 name: dart_application_1
-description: A sample Dart API concept
+description: A simple Shelf API
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.7.0
+  sdk: '>=2.17.0 <3.0.0'
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
-  http: ^1.2.0  # Use the latest version from pub.dev
   shelf: ^1.4.0
   shelf_router: ^1.1.0
 
 dev_dependencies:
-  lints: ^5.0.0
-  test: ^1.24.0
+  lints: ^2.0.0
